Cambios Categgory y Account

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="name">Nombre</string>
     <string name="gastos">Gastos</string>
     <string name="ingresos">Ingresos</string>
+    <string name="menu_account">Cuentas</string>
+    <string name="total">Total</string>
 </resources>
