--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,12 @@
     <string name="account_created">Cuenta creada con éxito</string>
     <string name="account_updated">Cuenta actualizada con éxito</string>
     <string name="account_deleted">Cuenta eliminada con éxito</string>
+    <string name="confirm_delete_account_title">Eliminar Cuenta</string>
+    <string name="confirm_delete_account_message">¿Esta seguro que desea eliminar esta cuenta?</string>
+    <string name="cancel">Cancelar</string>
+    <string name="confirm_delete_category_title">Confirmar eliminación</string>
+    <string name="confirm_delete_category_message">¿Estás seguro de que deseas eliminar esta categoría?</string>
+    <string name="category_deleted">Categoría eliminada</string>
+    <string name="category_updated">Categoria actualizada</string>
+    <string name="category_created">Categoria creada</string>
 </resources>
