Finalizacion Back Category y arreglo warnings back

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="category_deleted">Categoría eliminada</string>
     <string name="category_updated">Categoria actualizada</string>
     <string name="category_created">Categoria creada</string>
+    <string name="category_name">Nombre Categoria</string>
 </resources>
